pattern collection in design mostly

--- a/_posts/thesis_chapters/2023-6-4-Design.md
+++ b/_posts/thesis_chapters/2023-6-4-Design.md
@@ -571,6 +571,7 @@ Phaser is a javascript framework embedded in html page. Unlike many game making 
   other unexpected Benefits
 
   - could bring in other web creation resource, piskel, -->
+  -
 #### Tensions associated with authenticity of audience
 
 **Learners may not find coding a project a motivating project if it is only a private activity with no authentic audience**.
@@ -654,23 +655,14 @@ The fruits of this freedom of participation are explored in chapter five.
 
 One way of navigating this was via exit and certain families did drop out at different phases.
 
-**LINK - Overcoming lack of software feedback - MOVE TO NEXT SECTION OR KEEP HERE AS A LINK?**
-
-One design principle explored in the literature review [@resnick_designing_2013] in the use of creative coding tools was that of immediate feedback for participants. Code playgrounds provide such immediate feedback. For example, in the code editing interface of glitch.com shown in Illustration 1, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
-
-INSERT SIDE BY SIDE SCREEN SHOT
-
-The a game template served a similar purpose. This is explored in the next section.
-
-The next chapter explores responses to the aspect of identity in more detail.
-
 **Narrative summary of conflict**
 
 The conflict comprised of compounding factors and resulted in a lack of desire to complete coding activities before fully engaging with them.
 
-In the initial stages the families were not able to reconcile the obstacles
+In the initial stages some families struggled to reconcile the obstacles presented but
 
-The solutions
+The next chapter explores responses to the aspect of identity in more detail.
+
 
 ### 2. Participant conflict due to lack of relevant technical support
 
@@ -712,20 +704,38 @@ However, interview data from participants placed great value on the flexibility 
  NOTE - how can this be more analytical.  -->
 
 
+
+**Code Playground to overcoming lack of software feedback**
+
+One design principle explored in the literature review [@resnick_designing_2013] in the use of creative coding tools was that of immediate feedback for participants. Code playgrounds provide such immediate feedback. For example, in the code editing interface of glitch.com shown in Fig 4.x, changes made to the code on the left section take immediate effect in the resultant game on the right side of the screen.
+
+
+![Changes made to the code on the left section take immediate effect in the right-hand preview window](./Pictures/phaser_simple.png){width=85%}
+
+Fig 4.x, Changes made to the code on the left section take immediate effect in the right-hand preview window
+
+The a game template served a similar purpose. This is explored in the next section.
+
+
+
 **Structuring a game template**
 
-In response, at the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus the design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
+In response, at the start of P3 I further adapted a game template used in a Phaser tutorial and other techniques I had encountered in similar resources. Thus, the learning design started to follow the Use-Modify-Create model to build familiarity with and to scaffold the adaptation and use of coding constructs [@lee_computational_2011].
 
 DESCRIBE IN MORE DETAIL THE AFFORDANCES?
+
 FIND MORE ON BLOCKS ETC
 EXAMPLE OF CODE STRUCTURE?
   - USE OF PHASER 2?
   - BLOCK SIZE TO MATCH PISKEL
 
-In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, to reduce coding syntax knowledge needed in starting from scratch, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that more hands on time with tools would have really helped them.
+The template game was hosted on the code playgroud
 
-The impact of this starting template is explored in the following chapter.
+The process of
 
+In line with this research, I posited that using a starting template would to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices. This approach responds to the feedback from the participant that greater time allocated to hands-on use of tools before making design decisions would be welcome.
+
+The impact of this starting template in the P3 and P4 sessions is explored in the following chapter in greater detail.
 
 **Linear and stand-alone tutorial and code snippet resources**
 
@@ -763,54 +773,34 @@ Interestingly, the online menus was not used by participants in any regular or c
 
 The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. My initial attempts were a list of code examples in a shared google document and printed out self-contained chapters.
 
-This process was initially confusing for participants. Thus while these resources were developed in response to one conflict they introduced new tensions. Specifically navigation of the resources and how they fitted together.
+Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
 
-**Use of a collection of game design patterns**
+**Using of a collection of game design patterns**
 
-I decided to create a web page to house this collection of code examples, the starting template and a link to the online book of step-by-step resources. 
+while these resources were developed in response to one conflict they introduced new tensions. Specifically, users found the navigation of the resources, finding the right resources online was initially confusing. As such this barrier was in turn mitigated by printing step by step tutorials.
 
+In addition, I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created. For easy of navigation I also included the starting template and a link to the online book of step-by-step resources.
 
+Learning resources linked to game design patterns were presented in a grid format with images that focused on the player experience rather than underlying coding constructs.
 
-EDIT THIS DOWN AND FIND THE KEY THEME HERE - MERGE WITH NEXT SECTION IF POSSIBLE.
-
-
-MOVE?
-In PBL, UDL and other models - learner choice and building agency is shown to be of value in increasing engagement and ownership over learning. However, building the relevant knowledge to identify, agree on and implement game patterns from scratch takes time and without relevant scaffolding too so long that it negatively impacted motivation.
-
-Learning resources linked to game design patterns were presented in a menu format. They were made more accessible with graphics focused on the player experience rather than underlying coding constructs. The purpose of this design work was to;
-
-- increase learner engagement through accessible design
-- make documentation relatable to existing gameplay experience
-- develop use of common GPD terminology
-
-Some of these were aesthetic in nature to do with the graphical representation of game characters, hazards and background images. Some most accurately described as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space including: size of game world,
+My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
 
 
-THE FOLLOWING IS EXPLORED IN EXAMPLE ABOVE - RELATE IT SOMEHOW AND FIND ANALYSIS HERE.
-There were two main ways of approaching adding a new pattern. One to examing a code example which was built around the same code base.
+**Tactical structuring of the pattern collection**
 
-This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. The other was longer form step by step help.
+In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements. Initial design were just in response to grouping participant requests.
 
+I noted that some of these were aesthetic in nature for example; the graphical representation of game characters; adding sounds; and adding background images. Others are described in professional literature as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space like the size and shape of game world and adding new levels the game.
 
-#### Structuring the pattern collection
-
-This section goes into detail of different themes the game pattern collection. This is relevant to RQ1 as this structuring mirrors and has the potentials to reinforce the process of analysing game elements. Done via games at the start of sessions.
-
-In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements. Initial design were just in response to grouping participant requests. I experimented with different themes to contains these and also the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings.
-
+I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings.
 
 ![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
 
-Scan of Journal Sketch of early attempt at dividing features by type and difficulty
+_Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type and difficulty - Dated 11.3.2019_
 
-- see Schell's lenses work for a more complete taxonomy.
-- MDA framework
-- Game Jam template, goals, space, rules, mechanics, objects
+The process of sketching, revising and resketching the elements led me to connect this process of categorisation with the work of game theorists. I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
 
-I was inspired by work which merged academic and professional interpretations of game elements with those used to kick start beginners in the process of hacking games in a Game Jam. This alignment suits my approach of demystifying technology.
-
-In early stages I was influenced by the categorisation of game elements used by GSM team which also was implemented in the Game Jam Guide [@cornish_game_2018; @institute_of_play_gamestar_nodate].
-The key elements are:
+In my adaptation I had asked participants to do play a number of retro arcade and console games and then to complete created a printable A3 hand out which was given to participant after playing The key elements I are:
 
 - SPACE: Where the game takes place.
 - GOAL: What is the objective of the game? What are you trying to do?
@@ -818,21 +808,22 @@ The key elements are:
 - MECHANICS: What actions take place in the game. What are the verbs involved?
 - RULES: What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
 
-This work aligns with the MDA framework which allows shiftes focus to  the user experience which had appeal to making the process more accessible.
+This work also aligns with the MDA framework. I was drawn also to this framework due to the similar focus to the user experience which has potential to make the process of analysis games more accessible [@olsson2014conceptual].. I then took the existing list of game elements that have been identified by students and categorised them based on a blend of these two frameworks. I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_.
 
-Later, I note the following limitations.
-- The language is not accessible to teachers and learners.
-- The definition of aesthetics is very wide incorporating user experience in a way that was not suitable to learners.
-
-A blend of the two gave the following staring coding scheme in terms of activities related directly to adding features or altering the game.
-
-Finally I decided on the following framework for P3 which we retained for P4.There were three colour themed categories of missions which existed in addition to the core challenges of the _home_ templated game. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements.
+I introduced the following framework for P3 which we retained for P4. There were three colour themed categories of missions which existed in addition to the core challenges of the _home_ templated game. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements.
 
 In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
 
 ![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
 
-While not driven by other research at this stage, in retrospect, the goals of theming the patterns by function and difficulty align with the work by Holopainen and colleagues on the use of pattern collections to help structure game making [@holopainen2007teaching].  
+This section has explored  detail of different themes the game pattern collection.
+
+This chosen structure mirrored and potentially reinforces  the process of analysing game elements. Done via games at the start of sessions.
+
+This is relevant to RQ1 as a potential tool for facilitators to jump start
+
+While the process of games analysis has limited research for novice game makers, it is not the the field of learning text coding. Similarly this outcome of theming the patterns by function and  and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. While researchers ahve undertaken similar work
+
 
 <!--
 ### Building Identities as Game Makers DROP THIS FOR NOW MOVE TO NEW PAPER
