--- a/_posts/thesis_chapters/2023-6-6-Gdps.md
+++ b/_posts/thesis_chapters/2023-6-6-Gdps.md
@@ -65,6 +65,13 @@ title:  6. The Use of Gameplay Design Patterns "It’s like a project in itself,
     -   [Discussion on GDPs, emerging processes and learner
         agency](#discussion-on-gdps-emerging-processes-and-learner-agency)
 
+
+## Moved from previous sections - to allocate in this chapter
+
+CONCLUDING REMARKS?
+In PBL, UDL and other models - learner choice and building agency is shown to be of value in increasing engagement and ownership over learning. However, building the relevant knowledge to identify, agree on and implement game patterns from scratch takes time and without relevant scaffolding too so long that it negatively impacted motivation.
+
+
 ## Introduction to This Writing
 
 While this piece of writing contains results, it also contains references to concepts and methodologies which will be included in other chapters in the final thesis. Other emerging chapters are online at - https://mickfuzz.github.io/phd4/thesis_chapters.html
